--- a/pervane/templates/index.html
+++ b/pervane/templates/index.html
@@ -1,6 +1,12 @@
 <html>
  <head>
     <title>Pervane - Plain text based note taking app</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="static/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/default.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="https://uicdn.toast.com/tui-editor/latest/tui-editor.css"></link>
@@ -26,6 +32,16 @@
         display: none;
         padding-left: 15px;
       }
+
+      input {
+        max-height: 30px;
+        padding-top: 5px;
+        margin-top: 10px;
+      }
+
+      nav {
+        max-height: 38;
+      }
     </style>
  </head>
  <body>
@@ -42,7 +58,7 @@
           <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/hakanu/pervane">Pervane</a>
+          <a class="nav-link" href="https://github.com/hakanu/pervane">Contribute</a>
         </li>
       </ul>
       <form class="form-inline mt-2 mt-md-0" action="/search" method="GET">
@@ -51,13 +67,12 @@
     </div>
   </nav>
 </header>
-<br><br>
 
 <div class="">
     <div class="row">
         <div class="col-md-3">
           <p>
-            <a href="/">{{ tree.name }}</a>
+            <a href="/">{{ tree.path}}</a>
             <span>
               <a href="#" onclick="addNode('{{ tree.path }}')">
                 <svg class="bi bi-plus" width="1em" height="1em" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -92,7 +107,7 @@
                     <path d="M11.828 6a3 3 0 01-2.12-.879l-.83-.828A1 1 0 008.173 4H4.5a1 1 0 00-1 .981L3.546 6h-1L2.5 5a2 2 0 012-2h3.672a2 2 0 011.414.586l.828.828A2 2 0 0011.828 5v1z"/>
                   <path fill-rule="evenodd" d="M15.81 6H4.19a1 1 0 00-.996 1.09l.637 7a1 1 0 00.995.91h10.348a1 1 0 00.995-.91l.637-7A1 1 0 0015.81 6zM4.19 5a2 2 0 00-1.992 2.181l.637 7A2 2 0 004.826 16h10.348a2 2 0 001.991-1.819l.637-7A2 2 0 0015.81 5H4.19z" clip-rule="evenodd"/>
                 </svg>
-                /{{ item.name }}
+                {{ item.name }}/
               </a>
 
               &nbsp;&nbsp;
@@ -107,7 +122,7 @@
             {% endif %}
 
             {%- if item.children -%}
-                <ul>{{ loop(item.children) }}</ul>
+                <ul id="{{item.path|replace(' ', '_')|replace('/', '-'|replace('\\', '-'))}}">{{ loop(item.children) }}</ul>
             {%- endif %}
               </li>
           {%- endfor %}
@@ -182,6 +197,19 @@
 <script src="https://uicdn.toast.com/tui-editor/latest/tui-editor-Editor-full.js"></script>
 <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/Darkmode.js/1.5.4/darkmode-js.min.js"></script>-->
 <script>
+    // Get expand/collapse memory from localstorage.
+    for (var i = 0; i < localStorage.length; i++) {
+      var key = localStorage.key(i);
+      var value = localStorage.getItem(key);
+      console.log('Key: ' + key + ', Value: ' + value);  
+      // Hacky but useful way to generate ids from folder paths.
+      // needed to use false as a str because is(visible) is serialized :/
+      if (value != 'false') {
+        console.log('making it visible: ', $('#' + key)[0]);
+        $('#' + key).eq(0).css("display", "block");
+      }
+    }
+
     document.addEventListener('DOMContentLoaded', (event) => {
       document.querySelectorAll('pre code').forEach((block) => {
         hljs.highlightBlock(block);
@@ -193,8 +221,11 @@
     //new Darkmode().showWidget();
 
     $('.expand').click(function() {
-      console.log('expanding');
-      $('ul', $(this).parent()).eq(0).toggle();
+      var nearest_ul = $('ul', $(this).parent()).eq(0);
+      console.log('expanding', nearest_ul.attr('id'), nearest_ul.is(':visible')); 
+      nearest_ul.toggle();
+      window.localStorage.setItem(nearest_ul.attr('id'),
+                                  nearest_ul.is(':visible'));
     });
 
     {% if md_content and path %}
