Add additional static files for editor.md to manifest; remove reloading upon file modification. (fixes #16)

--- a/pervane/templates/index.html
+++ b/pervane/templates/index.html
@@ -310,7 +310,7 @@
           if (result.result == 'success') {
             $('#status').text('Updated @ ' + (new Date()));
             console.log('Reloading');
-            location.reload();
+            //location.reload();
           } else {
             $('#status').text('Failed to update @ ' + (new Date()));
     }
