--- a/pervane/static/css/styles.css
+++ b/pervane/static/css/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: 'PT Sans', sans-serif;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  color: #5a5a5a;
+/*  color: #5a5a5a;*/
 /*        font-size: 1.5vw;*/
   background-color:rgb(90, 90, 90);
 }
