--- a/pervane/static/css/styles.css
+++ b/pervane/static/css/styles.css
@@ -9,12 +9,21 @@ body {
 }
 
 ul {
-  padding-left: 15px;
+  padding-left: 12px;
+  list-style: none;
+  list-style-type: none;
 }
 
 ul li ul {
   display: none;
-  padding-left: 15px;
+  padding-left: 12px;
+  list-style: none;
+  list-style-type: none;
+}
+
+.sidebar ul {
+  list-style: none;
+  list-style-type: none;
 }
 
 header input {
@@ -30,6 +39,7 @@ nav {
 .sidebar {
   background-color:rgb(90, 90, 90);
   color: white;
+  font-size: 13px;
 }
 
 .sidebar a {
