--- a/pervane/static/css/styles.css
+++ b/pervane/static/css/styles.css
@@ -32,10 +32,6 @@ header input {
   margin-top: 10px;
 }
 
-nav {
-  max-height: 38;
-}
-
 .sidebar {
   background-color:rgb(90, 90, 90);
   color: white;
@@ -52,4 +48,10 @@ nav {
 
 .col-md-9 a {
   color: white;
+}
+
+.nav-narrow {
+  max-height: 20;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
